# emf4cpp

./: CMakeLists.txt  ProjectHome.md  README.md  emf4cpp-0.0.1-Example1.tgz
emf4cpp.tests/: .cproject  CMakeLists.txt  update-examples.sh
emf4cpp.tests/EndUserLicense/: CMakeLists.txt  enduserlicense.cmake  enduserlicense.cpp  enduserlicense.ecore  enduserlicense.hpp  enduserlicense.pri  enduserlicense_forward.hpp
emf4cpp.tests/EndUserLicense/enduserlicense/: EnduserlicenseFactory.cpp  EnduserlicenseFactory.hpp  EnduserlicenseFactoryImpl.cpp  EnduserlicensePackage.cpp  EnduserlicensePackage.hpp  EnduserlicensePackageImpl.cpp  dllEnduserlicense.hpp
emf4cpp.tests/PyEcore/: CMakeLists.txt  PyEClass.cpp  PyEModuleBase.cpp  PyEModuleBase.hpp  PyEObject.cpp  PyEPackage.cpp  PyEcore.hpp  main.cpp
emf4cpp.tests/PyEcore/tests/: test1.py
emf4cpp.tests/ast/: CMakeLists.txt  km3_test.cmake  parser.hpp  test_km3.cpp
emf4cpp.tests/company/: CMakeLists.txt  company.cmake  company.cpp  company.ecore  company.hpp  company.pri  company_forward.hpp
emf4cpp.tests/company/company/: Company.cpp  Company.hpp  CompanyFactory.cpp  CompanyFactory.hpp  CompanyFactoryImpl.cpp  CompanyImpl.cpp  CompanyPackage.cpp  CompanyPackage.hpp  CompanyPackageImpl.cpp  Department.cpp  Department.hpp  DepartmentImpl.cpp  Employee.cpp  Employee.hpp  EmployeeImpl.cpp  PhonebookEntry.cpp  PhonebookEntry.hpp  PhonebookEntryImpl.cpp  dllCompany.hpp
emf4cpp.tests/company/test/: CMakeLists.txt  UMU.xmi  test.cpp
emf4cpp.tests/cst/: CMakeLists.txt  CST.cmake  CST.cpp  CST.hpp  CST.pri  CST_forward.hpp  modelcst.java.ecore
emf4cpp.tests/cst/CST/: CSTFactory.cpp  CSTFactory.hpp  CSTFactoryImpl.cpp  CSTPackage.cpp  CSTPackage.hpp  CSTPackageImpl.cpp  Element.cpp  Element.hpp  ElementImpl.cpp  Leaf.cpp  Leaf.hpp  LeafImpl.cpp  Node.cpp  Node.hpp  NodeImpl.cpp  Tree.cpp  Tree.hpp  TreeImpl.cpp  dllCST.hpp
emf4cpp.tests/cst/test/: CMakeLists.txt  test.cpp
emf4cpp.tests/edate/: CMakeLists.txt  edate.cmake  edate.cpp  edate.ecore  edate.hpp  edate.pri  edate_forward.hpp
emf4cpp.tests/edate/edate/: Apollo11.cpp  Apollo11.hpp  Apollo11Impl.cpp  EdateFactory.cpp  EdateFactory.hpp  EdateFactoryImpl.cpp  EdatePackage.cpp  EdatePackage.hpp  EdatePackageImpl.cpp  Person.cpp  Person.hpp  PersonImpl.cpp  dllEdate.hpp
emf4cpp.tests/edate/test/: CMakeLists.txt  My.edate  test.cpp
emf4cpp.tests/enumeration/: CMakeLists.txt  enumeration.cmake  enumeration.cpp  enumeration.ecore  enumeration.hpp  enumeration.pri  enumeration_forward.hpp
emf4cpp.tests/enumeration/enumeration/: Bird.cpp  Bird.hpp  BirdImpl.cpp  BirdType.hpp  EnumerationFactory.cpp  EnumerationFactory.hpp  EnumerationFactoryImpl.cpp  EnumerationPackage.cpp  EnumerationPackage.hpp  EnumerationPackageImpl.cpp  dllEnumeration.hpp
emf4cpp.tests/enumeration/test/: CMakeLists.txt  My.enumeration  test.cpp
emf4cpp.tests/eopposite/: CMakeLists.txt  cmake_install.cmake  eopposite.cmake  eopposite.cpp  eopposite.ecore  eopposite.hpp  eopposite.pri  eopposite_forward.hpp  install_manifest.txt
emf4cpp.tests/eopposite/eopposite/: EoppositeFactory.cpp  EoppositeFactory.hpp  EoppositeFactoryImpl.cpp  EoppositePackage.cpp  EoppositePackage.hpp  EoppositePackageImpl.cpp  LeftHand.cpp  LeftHand.hpp  LeftHandImpl.cpp  NamedObject.cpp  NamedObject.hpp  NamedObjectImpl.cpp  RightHand.cpp  RightHand.hpp  RightHandImpl.cpp  RightMultiple.cpp  RightMultiple.hpp  RightMultipleImpl.cpp  TopLevel.cpp  TopLevel.hpp  TopLevelImpl.cpp  dllEopposite.hpp
emf4cpp.tests/eopposite/test/: CMakeLists.txt  test.cpp
emf4cpp.tests/idlmm/: CMakeLists.txt  idlmm.cmake  idlmm.cpp  idlmm.hpp  idlmm.pri  idlmm_forward.hpp
emf4cpp.tests/idlmm/idlmm/: AliasDef.cpp  AliasDef.hpp  AliasDefImpl.cpp  ArrayDef.cpp  ArrayDef.hpp  ArrayDefImpl.cpp  AttributeDef.cpp  AttributeDef.hpp  AttributeDefImpl.cpp  ConstantDef.cpp  ConstantDef.hpp  ConstantDefImpl.cpp  Contained.cpp  Contained.hpp  ContainedImpl.cpp  Container.cpp  (+71 more)
emf4cpp.tests/json/: CMakeLists.txt  json.cmake  json.cpp  json.ecore  json.ecorediag  json.hpp  json.pri  json_forward.hpp
emf4cpp.tests/kdm/: CMakeLists.txt  kdm.cmake  kdm.cpp  kdm.hpp  kdm.pri  kdm_action.cmake  kdm_build.cmake  kdm_code.cmake  kdm_conceptual.cmake  kdm_core.cmake  kdm_data.cmake  kdm_event.cmake  kdm_forward.hpp  kdm_kdm.cmake  kdm_platform.cmake  kdm_source.cmake  kdm_structure.cmake  kdm_ui.cmake
emf4cpp.tests/mapping-tests/: CMakeLists.txt  test-EList.cpp  test-Reflective.cpp  test-out_ptr.cpp
emf4cpp.tests/mydsl/: CMakeLists.txt  myDsl.cmake  myDsl.cpp  myDsl.hpp  myDsl.pri  myDsl_forward.hpp
emf4cpp.tests/pycxx/: pycxx.cpp  test2.py
emf4cpp.tests/resource/: CMakeLists.txt  ResourceOptions.cmake  ResourceOptions.cpp  ResourceOptions.ecore  ResourceOptions.hpp  ResourceOptions.pri  ResourceOptions_forward.hpp  ResourceTests.cmake  ResourceTests.cpp  ResourceTests.ecore  ResourceTests.hpp  ResourceTests.pri  ResourceTests_forward.hpp
emf4cpp.tests/subpackage/: CMakeLists.txt  TopLevelPackage.cmake  TopLevelPackage.cpp  TopLevelPackage.hpp  TopLevelPackage.pri  TopLevelPackage_forward.hpp  subpackage.ecore
emf4cpp.tests/svg/: CMakeLists.txt  PrimitiveTypes.cmake  PrimitiveTypes.cpp  PrimitiveTypes.hpp  PrimitiveTypes.pri  PrimitiveTypes_forward.hpp  SVG.cmake  SVG.cpp  SVG.hpp  SVG.pri  SVG_forward.hpp
emf4cpp.tests/tests/: CMakeLists.txt  WidgetsMM.ecore  company.cpp  company.ecore  read-metamodel.cpp  salida.ecore
emf4cpp.tests/tree-bintree/: BinTree.ecore  CMakeLists.txt  bintree.cmake  bintree.cpp  bintree.hpp  bintree.pri  bintree_forward.hpp  tree.cmake  tree.cpp  tree.hpp  tree.pri  tree_forward.hpp
emf4cpp.tests/treeiterator/: CMakeLists.txt  treeiterator.cmake  treeiterator.cpp  treeiterator.ecore  treeiterator.hpp  treeiterator.pri  treeiterator_forward.hpp
emf4cpp.tests/xpand/: CMakeLists.txt  xpand3.cmake  xpand3.cpp  xpand3.ecore  xpand3.hpp  xpand3.pri  xpand3_declaration.cmake  xpand3_expression.cmake  xpand3_forward.hpp  xpand3_statement.cmake
org.csu.emf4cpp.generator/: .project  CMakeLists.txt  emf4cpp.generator.sh
(+2549 files in other folders)
